--- a/www/index.html
+++ b/www/index.html
@@ -63,8 +63,8 @@
     <div class="header">
         <a href="#" class="main-logo"></a>
         <a href="#" class="open-menu"><i class="fa fa-navicon"></i></a>
-        <a href="contact.html" class="open-mail"><i class="fa fa-envelope-o"></i></a>
-        <a href="tel:+1 234 567 890" class="open-call"><i class="fa fa-phone"></i></a>
+<!--        <a href="contact.html" class="open-mail"><i class="fa fa-envelope-o"></i></a>-->
+<!--        <a href="tel:+1 234 567 890" class="open-call"><i class="fa fa-phone"></i></a>-->
         
     </div> 
     
